--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Kodchasan" rel="stylesheet">
     <title>URL Shortener Microservice</title>
   </head>
   <body>
