--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Kodchasan" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis|Kodchasan"
+      rel="stylesheet"
+    />
     <title>URL Shortener Microservice</title>
   </head>
   <body>
